Cambios en el filtro y en chips

--- a/src/app/abc-atta-dash/abc-atta-dash.component.html
+++ b/src/app/abc-atta-dash/abc-atta-dash.component.html
@@ -34,7 +34,7 @@
                                                        </div>
                                                   </div>
      
-                                                  <mat-menu #menu="matMenu" >
+                                                  <mat-menu #menu="matMenu" class="filtro-dash-alta"   >
                                                        <div (click) = "$event.stopPropagation()" class="content-filtro" >
                                                             <div class="title-filter">
                                                                  <p>{{ 'dashboard.title-filter' | translate }}</p>
